src/objects/Paricion__c.object
<CustomObject>
    <description>Pariciones que tendrá una vaca.</description>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_en_pre_parto__c</fullName>
        <label>Fecha en pre-parto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sexo_de_cria__c</fullName>
        <label>Sexo de cría</label>
        <picklist>
            <picklistValues>
                <fullName>Macho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hembra</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vaca__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>La parición pertenece a una vaca</description>
        <label>Vaca</label>
        <referenceTo>Vaca__c</referenceTo>
        <relationshipLabel>Pariciones</relationshipLabel>
        <relationshipName>Pariciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parición</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Parición</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pariciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>